--- a/spacetennis/package.json
+++ b/spacetennis/package.json
@@ -14,8 +14,9 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^7.4.1",
+    "react-router-dom": "^7.5.0",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
